--- a/mapTutorial/package.json
+++ b/mapTutorial/package.json
@@ -7,10 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.12.1",
     "react": "16.6.3",
     "react-native": "0.58.6",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.0.17",
     "react-native-maps": "^0.23.0",
+    "react-native-popup-menu": "^0.15.5",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1"
   },
   "devDependencies": {
